# hbconv

./: Cargo.toml  LICENSE.txt  Readme.md
src/: homebank.rs  main.rs
src/inputs/: mod.rs  postbank.rs  sparda.rs  util.rs
