[package]
name = "hbconv"
version = "0.1.0"
edition = "2021"
readme = "Readme.md"
license = "MIT"

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.2", features = ["env", "derive"] }
csv = "1.3.0"
currency_rs = "1.3.0"
miette = { version = "7.2.0", features = ["fancy"] }
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
