[package]
name = "hbconv"
version = "0.1.0"
edition = "2021"
readme = "Readme.md"
license = "MIT"

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.2", features = ["env", "derive"] }
csv = "1.3.0"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
miette = { version = "7.2.0", features = ["fancy"] }
rusty-money = { version = "0.4.1", features = ["iso"] }
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
rust_decimal = "1.34.3"
